Added Admin checkbox

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -25,11 +25,9 @@
 
         <form onsubmit="askQuestion(event)" class="flex items-center">
             <input type="hidden" id="token" value="0"/>
-            <input type="text" id="question"
-                class="flex-1 p-3 border rounded-l-md focus:outline-none focus:border-indigo-500"
-                placeholder="Type your question..."/>
-            <button type="submit" id="submit_button"
-                class="bg-indigo-500 border border-indigo-500 text-white px-6 py-3 rounded-r-md hover:bg-indigo-600 hover:border-indigo-600">Ask</button>
+            <input type="checkbox" id="admin"/>
+            <input type="text" id="question" class="flex-1 p-3 border rounded-l-md focus:outline-none focus:border-indigo-500" placeholder="Type your question..."/>
+            <button type="submit" id="submit_button" class="bg-indigo-500 border border-indigo-500 text-white px-6 py-3 rounded-r-md hover:bg-indigo-600 hover:border-indigo-600">Ask</button>
         </form>
     </div>
 
@@ -50,6 +48,7 @@
         // Prevent the default form submission behavior
         event.preventDefault();
         
+        const admin = document.getElementById("admin");
         const question = document.getElementById("question");
         const query = question.value
         document.getElementById("submit_button").classList.remove('border-2', 'border-rose-500', 'bg-rose-500', 'text-gray-500');
@@ -72,7 +71,7 @@
             const response = await fetch('/', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ question: query, chats: chats, admin: true}),
+                body: JSON.stringify({ question: query, chats: chats, admin: admin.checked}),
             });
 
             if (!response.ok) {
