--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -15,8 +15,9 @@
         <header class="absolute inset-x-0 top-0 z-50">
             <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
                 <div class="flex lg:flex-1">
-                    <a href="/" class="m-1.5 p-1.5">
-                        <span class="">Talk To Quran</span>
+                    <a href="/" class="-m-1.5 p-1.5">
+                        <span class="sr-only">ChadBot</span>
+                        <img class="h-8 w-auto" src="{{ url_for('static', filename='logo.png')}}" alt="chadbot" />
                     </a>
                 </div>
                 <div class="flex lg:hidden">
