--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -2,6 +2,11 @@
 {% block title %} Personal {% endblock %}
 {% block content %}
 <div class="mx-auto max-w-4xl py-32 sm:py-48 lg:py-56">
+    <div class="pb-12">
+        <h2 class="text-base font-semibold leading-7 text-gray-900">Lets learn from Quran!</h2>
+        <p class="mt-1 text-sm leading-6 text-gray-600">Express your feelings or if you have specific question, state that.</p>
+        <p class="text-sm leading-6 text-gray-400">&#9432 FYI for now we don't have local conversation memory.</p>
+    </div>
     <div class="bg-transparent w-full p-8 rounded-lg shadow-lg">
         <div id="chatDisplay" class="gap-x-10">
         {% if conversation %}
@@ -25,7 +30,7 @@
 
         <form onsubmit="askQuestion(event)" class="flex items-center">
             <input type="hidden" id="token" value="0"/>
-            <input type="checkbox" id="admin"/>
+            <input class="mr-5 w-5 h-5" type="checkbox" id="admin"/>
             <input type="text" id="question" class="flex-1 p-3 border rounded-l-md focus:outline-none focus:border-indigo-500" placeholder="Type your question..."/>
             <button type="submit" id="submit_button" class="bg-indigo-500 border border-indigo-500 text-white px-6 py-3 rounded-r-md hover:bg-indigo-600 hover:border-indigo-600">Ask</button>
         </form>
