--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Personal {% endblock %}
+{% block title %} Talk To Quran {% endblock %}
 {% block content %}
 <div class="mx-auto max-w-4xl py-32 sm:py-48 lg:py-56">
     <div class="pb-12">
