Updated Radio Button.

--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -16,8 +16,8 @@
             <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
                 <div class="flex lg:flex-1">
                     <a href="/" class="-m-1.5 p-1.5">
-                        <span class="sr-only">ChadBot</span>
-                        <img class="h-8 w-auto" src="{{ url_for('static', filename='logo.png')}}" alt="chadbot" />
+                        <span class="sr-only">Talk to Quran</span>
+                        <img class="h-8 w-auto" src="{{ url_for('static', filename='logo.png')}}" alt="talk-to-quran" />
                     </a>
                 </div>
                 <div class="flex lg:hidden">
