--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 {% block title %} Talk To Quran {% endblock %}
 {% block content %}
-<div class="mx-auto max-w-4xl py-32 sm:py-48 lg:py-56">
+<div class="mx-auto max-w-4xl py-32 sm:py-32 lg:py-56">
     <div class="pb-12">
         <h2 class="text-base font-semibold leading-7 text-gray-900">Lets learn from Quran!</h2>
         <p class="mt-1 text-sm leading-6 text-gray-600">Express your feelings or if you have specific question, state that.</p>
-        <p class="text-sm leading-6 text-gray-400">&#9432 FYI for now we don't have local conversation memory.</p>
     </div>
     <div class="bg-transparent w-full p-8 rounded-lg shadow-lg">
-        <div id="chatDisplay" class="gap-x-10">
+        <div id="chatDisplay" class="gap-x-10"> 
         {% if conversation %}
             {% for chat in conversation %}
                 {% if chat.sender == 'human' %}
@@ -33,11 +32,11 @@
             <!-- Checkbox for the boolean input -->
             <span class="flex items-center space-x-2 mr-4">
                 <label>Sementic Search</label>
-                <input id="1" name="selected_participant" type="radio" value="1" onclick="event.stopPropagation()" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" />
+                <input id="1" name="selected_participant" type="radio" value="1" checked onclick="event.stopPropagation()" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" />
                 <label>AI Search</label>
                 <input id="2" name="selected_participant" type="radio" value="2" onclick="event.stopPropagation()" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" />
             </span>
-            <input type="text" id="question" class="flex-1 p-3 border rounded-l-md focus:outline-none focus:border-indigo-500" placeholder="Type your question..."/>
+            <input type="text" id="question" class="flex-1 p-3 border rounded-l-md focus:outline-none focus:border-indigo-500" placeholder="Type here..."/>
             <button type="submit" id="submit_button" class="bg-indigo-500 border border-indigo-500 text-white px-6 py-3 rounded-r-md hover:bg-indigo-600 hover:border-indigo-600">Ask</button>
         </form>
     </div>
